# minimax-openwebui-tts-proxy

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
tests/: test_app.py
