[project]
name = "minimax-openwebui-tts-proxy"
version = "0.1.0"
description = "OpenAI-compatible TTS proxy for MiniMax, intended for Open WebUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
